# rust-actix-web-example

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs  settings.rs
src/api/: cache_controller.rs  mod.rs  ping_controller.rs  user_controller.rs
src/bo/: mod.rs  simple_user.rs
src/common/: cache.rs  file.rs  mod.rs  mongo.rs
src/config/: app.rs  mod.rs
src/constant/: banner.rs
src/entity/: user.rs
src/resources/: banner.txt
src/service/: mod.rs  ping_service.rs  user_service.rs
src/service/impl/: mod.rs  ping_service_impl.rs  user_service_impl.rs
src/utils/: log.rs
