[package]
name = "actix-web-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
lettre = "0.11.3"
lettre_email = "0.9"
mime = "0.3.13"
redis = { version = "0.24.0", features = ["tokio-comp"] }
futures-util = "0.3.30"
dotenv = "0.15.0"
actix-rt = "2.8.0"
actix-service = "2.0.2"
actix-cors = "0.7.0"
log = "0.4.18"
env_logger = "0.10.0"
# excel
calamine = "0.23.1"
# pdf
printpdf = "0.6.0"
chrono = "0.4.31"
# cargo add actix-swagger
# https://github.com/openapi/actix-swagger
# https://crates.io/crates/actix-swagger
actix-swagger = "0.3.1"
async-trait = "0.1.77"

# https://github.com/mongodb/mongo-rust-driver
# https://github.com/actix/examples/tree/master/databases/mongodb
mongodb = "2"
lazy_static = "1.4"